--- a/index.html
+++ b/index.html
@@ -92,7 +92,17 @@
                           </p>
                       </div>
                     </div>
-                  </div>
+                </div>
+                <!-- Skills block -->
+                <div class="container">
+                    <div class="resume__block">
+                        <div class="skills">
+                            <h3 class="skills__header">Skills</h3>
+                            <p class="skills__text">Teamwork, resilience,
+                                dedication and continuous learning, perseverance, creativity.</p>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
   </body>
