update index.html add projects into

--- a/index.html
+++ b/index.html
@@ -107,7 +107,26 @@
                 <div class="container">
                     <div class="resume__block">
                         <div class="main-info fh">
-                            <div class="experiences"></div>                  
+                            <div class="experiences">
+                                <h3 class="experiences__header">Experience</h3>
+                                <div class="experiences__company">
+                                    <div class="experiences__company-header">                                        
+                                        <h3 class="experiences__company-header-name">Projects</h3>
+                                    </div>
+
+                                    <div class="experiences__company-project">
+                                        <a class="contact-info__item" href="https://github.com/eilleenmaria/landingPage.git" target="_blank" rel="noopener noreferrer">
+                                            <span class="experiences__company-project-role">LandingPage</span>
+                                        </a> 
+                                        <a class="contact-info__item" href="https://github.com/eilleenmaria/challenge-One-Encriptador.git" target="_blank" rel="noopener noreferrer">
+                                            <span class="experiences__company-project-role">Encrypter</span>
+                                        </a> 
+                                        <a class="contact-info__item" href="https://github.com/eilleenmaria/hangman.git" target="_blank" rel="noopener noreferrer">
+                                            <span class="experiences__company-project-role">Game Hangmang</span>        
+                                        </a>                                  
+                                    </div>
+                                </div>
+                            </div>                  
                             <div class="additional-info fv"></div>
                         </div>
                     </div>
