--- a/index.html
+++ b/index.html
@@ -127,7 +127,35 @@
                                     </div>
                                 </div>
                             </div>                  
-                            <div class="additional-info fv"></div>
+                            <div class="additional-info fv">
+                                <div class="additional-info fv">
+                                    <div class="additional-info__education">
+                                        <h3 class="additional-info__education-header">Education</h3>
+                                        <div class="additional-info__education-university">
+                                            <span class="additional-info__education-university-durability"> 2022-actually </span>
+                                            <h3 class="additional-info__education-university-speciality">TECHNOLOGY ANALYSIS AND SOFTWARE DEVELOPMENT</h3>
+                                            <p class="additional-info__education-university-name">Servicio Nacional de Aprendizaje SENA</p>
+                                        </div>
+                                        <div class="additional-info__education-university">
+                                            <span class="additional-info__education-university-durability"> 2022 </span>
+                                            <h3 class="additional-info__education-university-speciality">WEB PROGRAMMING  </h3>
+                                            <p class="additional-info__education-university-name">Oracle next education - ALURA LATAM</p>
+                                        </div>
+                                        <div class="additional-info__education-university">
+                                            <span class="additional-info__education-university-durability"> 2021 </span>
+                                            <h3 class="additional-info__education-university-speciality">HABILIDADES EN PROGRAMACION CON ENFASIS EN DESARROLLO DE APLICACIONES WEB </h3>
+                                            <p class="additional-info__education-university-name">Mintic 2022</p>
+                                        </div>
+                                        
+                                    </div>
+                                  
+                                    <div class="additional-info__languages">
+                                        <h3 class="additional-info__languages-header">Languages</h3>
+                                        <p class="additional-info__languages-item">English</p>
+                                        <p class="additional-info__languages-item">Spanish</p>
+                                    </div>
+                                  </div>
+                            </div>
                         </div>
                     </div>
                 </div>
